--- a/id.css
+++ b/id.css
@@ -73,6 +73,12 @@ body{
     left: 7.5%;
 }
 
+.flag_gif{
+    position: absolute;
+    top: 60.45%;
+    left: 4.5%;
+}
+
 .data_title{
     font-weight: 600;
     font-size: 18px;
